--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,7 +8,10 @@
     <ListView
         android:id="@+id/chatListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:focusable="true"
+        android:layout_weight="1"
+        android:focusableInTouchMode="true"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp" />
 
@@ -33,6 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:onClick="onClick"
+            android:enabled="false"
             android:text="전송" />
     </LinearLayout>
-</RelativeLayout>
+</LinearLayout>
