--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/chatListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
