--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,6 +36,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="#ffcc00"
-        android:text="임시 가입 계정으로 시작하기"
+        android:text="가입했던 계정으로 시작하기"
         android:layout_marginTop="10dp"/>
 </LinearLayout>
