--- a/app/src/main/res/layout/mypage.xml
+++ b/app/src/main/res/layout/mypage.xml
@@ -21,7 +21,7 @@
             android:layout_height="100dp"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/bg_circle_more"/>
+            android:src="@drawable/sub_img_picture"/>
 
     </LinearLayout>
 
