--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -43,7 +43,7 @@
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_margin="20dp"
-                    android:src="@drawable/bg_circle_more"/>
+                    android:src="@drawable/sub_img_picture"/>
 
             </LinearLayout>
 
