--- a/app/src/main/res/layout/recyclerviewholder_chat.xml
+++ b/app/src/main/res/layout/recyclerviewholder_chat.xml
@@ -9,16 +9,15 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/photo"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:adjustViewBounds="false"
             android:cropToPadding="false"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@drawable/sub_img_picture" />
 
         <LinearLayout
-            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
@@ -27,7 +26,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/viewholder_text"
+                android:id="@+id/chat_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="이름"
