--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -19,7 +19,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom">
 
         <EditText
@@ -28,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="채팅을 입력하세요"
+            android:imeOptions="actionSend"
             android:inputType="text" />
 
         <Button
