--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@drawable/background"
+              android:focusable="true"
+              android:focusableInTouchMode="true"
+              android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chatListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:focusable="true"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:focusableInTouchMode="true"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp" />
+        android:dividerHeight="0dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="bottom">
+        android:layout_gravity="bottom"
+        android:orientation="horizontal">
 
         <EditText
             android:id="@+id/editText"
@@ -27,16 +27,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="채팅을 입력하세요"
-            android:imeOptions="actionSend"
-            android:inputType="text" />
+            android:privateImeOptions="defaultInputmode=korean"/>
 
         <Button
             android:id="@+id/sendBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:onClick="onClick"
             android:enabled="false"
-            android:text="전송" />
+            android:onClick="onClick"
+            android:text="전송"/>
     </LinearLayout>
 </LinearLayout>
