--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -54,7 +54,6 @@
             android:layout_marginTop="8dp"
             android:layout_weight="1">
         </com.prograpy.app2.appdev2.main.MainCustomViewPager>
-
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
@@ -104,15 +103,17 @@
             android:id="@+id/fab3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="20dp"
             android:visibility="invisible"
+            android:elevation="6dp"
             android:src="@drawable/signalarm" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="20dp"
+            android:elevation="6dp"
             android:src="@drawable/floatingmessage"
             android:visibility="invisible"/>
 
@@ -121,8 +122,7 @@
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:layout_marginBottom="30dp"
-            android:src="@drawable/floatingbtnmain"
-            app:backgroundTint="@android:color/transparent" />
+            />
 
     </LinearLayout>
 
