--- a/app/src/main/res/layout/mypage.xml
+++ b/app/src/main/res/layout/mypage.xml
@@ -6,6 +6,36 @@
     android:background="@drawable/background"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
+
+        <ImageView
+            android:id="@+id/back"
+            android:layout_marginTop="8dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="14dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/left_arrow" />
+
+        <Button
+            android:id="@+id/editBtn"
+            android:layout_width="50dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="right"
+            android:layout_marginEnd="20dp"
+            android:text="수정" />
+    </RelativeLayout>
+
     <LinearLayout
         android:id="@+id/first_layout"
         android:layout_width="wrap_content"
@@ -86,8 +116,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/third_layout"
-        android:layout_marginTop="35dp">
-
+        android:layout_marginTop="35dp"
+        android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -97,15 +127,38 @@
             android:textColor="@android:color/background_dark"
             android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/profile_area"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:gravity="center"
-            android:text="청주시 서원구 분평동"
-            android:textColor="@android:color/background_dark"
-            android:textSize="20sp" />
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:id="@+id/profile_area"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:gravity="center"
+                android:text="청주시 서원구 분평동"
+                android:textColor="@android:color/background_dark"
+                android:textSize="20sp"
+                android:visibility="visible"/>
+
+            <EditText
+                android:id="@+id/profile_area_edit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:hint="주소를 입력하세요."
+                android:textColor="@android:color/background_dark"
+                android:textSize="20sp"
+                android:inputType="text"
+                android:visibility="gone"
+                />
+
+
+        </FrameLayout>
+
+
 
     </LinearLayout>
 
