--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -20,16 +20,12 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/text_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:text="프로필 사진"
-                android:textColor="@android:color/background_dark"/>
-
+            <ImageView
+                android:id="@+id/image_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/title" />
             <LinearLayout
                 android:id="@+id/linear_image"
                 android:layout_width="wrap_content"
@@ -40,8 +36,8 @@
 
                 <ImageView
                     android:id="@+id/center_image"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_margin="20dp"
                     android:scaleType="fitXY"
                     app:srcCompat="@android:color/darker_gray"/>
@@ -91,11 +87,14 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
+                    android:background="@android:color/holo_blue_dark"
+                    android:backgroundTint="@android:color/transparent"
                     android:gravity="center"
                     android:hint="입 력"
-                    android:inputType="textPersonName"
+
                     android:imeOptions="actionDone"
-                    android:textColorLink="@android:color/darker_gray"/>
+                    android:inputType="textPersonName"
+                    android:textColorLink="@android:color/darker_gray" />
 
                 <Button
                     android:id="@+id/nickname_btn"
@@ -163,18 +162,19 @@
                     android:id="@+id/text_from"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
                     android:text="거주지역 : "
                     android:textColor="@android:color/black"/>
 
                 <EditText
                     android:id="@+id/from_main"
-                    android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:hint="거주지역은 동까지 입력하시오."
-                    android:imeOptions="actionDone"
-                    />
+                    android:layout_marginTop="10dp"
+                    android:backgroundTint="@android:color/transparent"
+                    android:hint=" 거주지역은 동까지 입력"
+                    android:imeOptions="actionDone" />
 
             </LinearLayout>
 
@@ -212,10 +212,10 @@
                     <Spinner
                         android:id="@+id/hobby_first"
                         android:layout_width="match_parent"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:textAlignment="center"/>
+                        android:layout_weight="1"
+                        android:textAlignment="center" />
 
                     <Spinner
                         android:id="@+id/hobby_first_sub"
