--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:background="@drawable/background">
 
 
@@ -12,30 +13,44 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/logo2" />
+        android:layout_marginTop="60dp"
+        android:src="@drawable/logo" />
 
-    <com.nhn.android.naverlogin.ui.view.OAuthLoginButton
-        android:id="@+id/buttonOAuthLoginImg"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginTop="80dp"/>
-
-    <Button
-        android:id="@+id/btnKakao"
-        android:layout_width="235dp"
+    <EditText
+        android:id="@+id/id"
+        android:layout_marginTop="40dp"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="#ffcc00"
-        android:text="카카오톡으로 시작하기"
-        android:layout_marginTop="10dp"/>
+        android:inputType="text"
+        android:hint="ID"/>
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="Password"/>
+    <!--<Button-->
+        <!--android:id="@+id/btnKakao"-->
+        <!--android:layout_width="230dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:background="#ffcc00"-->
+        <!--android:text="카카오톡으로 시작하기"-->
+        <!--android:layout_marginTop="10dp"/>-->
+    <Button
+        android:id="@+id/login"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="로그인"
+        android:layout_marginTop="10dp"
+        android:background="#0000"/>
 
     <Button
         android:id="@+id/btnPass"
-        android:layout_width="235dp"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="#ffcc00"
+        android:background="#0000"
         android:text="가입했던 계정으로 시작하기"
         android:layout_marginTop="10dp"/>
 </LinearLayout>
