--- a/app/src/main/res/layout/activity_setting_app_version.xml
+++ b/app/src/main/res/layout/activity_setting_app_version.xml
@@ -18,7 +18,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginTop="50dp"
-            android:src="@drawable/logo2" />
+            android:src="@drawable/logo" />
     </LinearLayout>
 
     <LinearLayout
