--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -122,6 +122,8 @@
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:layout_marginBottom="30dp"
+            android:src="@drawable/logo"
+            android:backgroundTint="#0000"
             />
 
     </LinearLayout>
