--- a/app/src/main/res/layout/mypage.xml
+++ b/app/src/main/res/layout/mypage.xml
@@ -11,8 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        >
+        android:layout_marginTop="30dp">
 
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -21,7 +20,7 @@
             android:layout_height="100dp"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/sub_img_picture"/>
+            android:src="@drawable/sub_img_picture" />
 
     </LinearLayout>
 
@@ -35,20 +34,19 @@
             android:id="@+id/profile_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:text="홍길동"
             android:textColor="@android:color/background_dark"
-            android:textSize="18sp"
-            android:layout_centerHorizontal="true"
-            />
+            android:textSize="18sp" />
+
         <TextView
             android:id="@+id/profile_age"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/profile_name"
             android:text="(24)"
             android:textColor="@android:color/background_dark"
-            android:textSize="18sp"
-            android:layout_toRightOf="@+id/profile_name"
-            />
+            android:textSize="18sp" />
 
     </RelativeLayout>
 
@@ -65,48 +63,80 @@
             android:layout_marginLeft="15dp"
             android:gravity="left"
             android:text=" 성   별  :  "
-            android:textSize="20sp"
-            android:textColor="@android:color/background_dark"/>
-        <android.support.v7.widget.AppCompatRadioButton
-            android:id="@+id/man"
-            android:text="남자"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
-        <android.support.v7.widget.AppCompatRadioButton
-            android:id="@+id/woman"
-            android:paddingLeft="10dp"
-            android:text="여자"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            android:textColor="@android:color/background_dark"
+            android:textSize="20sp" />
+
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/man"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="남자" />
+
+            <RadioButton
+                android:id="@+id/woman"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="여자" />
+
+        </RadioGroup>
+
+
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/four_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_below="@+id/third_layout"
-        android:layout_marginTop="35dp">
+        android:layout_marginTop="35dp"
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginTop="8dp"
             android:layout_marginLeft="15dp"
             android:gravity="left"
             android:text="거주지역  : "
             android:textColor="@android:color/background_dark"
             android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/profile_area"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:gravity="center"
-            android:text="청주시 서원구 분평동"
-            android:textColor="@android:color/background_dark"
-            android:textSize="20sp" />
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:id="@+id/profile_area"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
+                android:text="청주시 서원구 분평동"
+                android:textColor="@android:color/background_dark"
+                android:textSize="20sp"
+                android:visibility="visible" />
+
+            <EditText
+                android:id="@+id/profile_area_edit"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:backgroundTint="@android:color/transparent"
+                android:gravity="center"
+                android:hint="주소를 입력하세요."
+                android:inputType="text"
+                android:textColor="@android:color/background_dark"
+                android:textSize="20sp"
+                android:visibility="gone" />
+
+
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -135,22 +165,54 @@
             android:layout_margin="10dp"
             android:text="1 순위" />
 
-        <Spinner
-            android:id="@+id/mypage_firsthobby1"
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="3"
-            android:textAlignment="center" />
+            android:layout_height="wrap_content">
 
-        <Spinner
-            android:id="@+id/mypage_firsthobby2"
+            <TextView
+                android:id="@+id/mypage_firsthobby1"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="3"
+                android:text="미입력"
+                android:textAlignment="center"
+                android:visibility="visible" />
+
+            <Spinner
+                android:id="@+id/hobby_first_edit"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:visibility="gone" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="3"
-            android:textAlignment="center" />
+            android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/mypage_firsthobby2"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="3"
+                android:text="미입력"
+                android:textAlignment="center"
+                android:visibility="visible" />
+
+            <Spinner
+                android:id="@+id/hobby_first_sub_edit"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:visibility="gone" />
+
+        </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
@@ -167,25 +229,61 @@
             android:layout_margin="10dp"
             android:text="2 순위" />
 
-        <Spinner
-            android:id="@+id/mypage_second_hobby1"
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="2"
-            android:textAlignment="center" />
+            android:layout_height="wrap_content">
 
-        <Spinner
-            android:id="@+id/mypage_second_hobby2"
+            <TextView
+                android:id="@+id/mypage_second_hobby1"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="3"
+                android:text="미입력"
+                android:textAlignment="center"
+                android:visibility="visible" />
+
+            <Spinner
+                android:id="@+id/hobby_second_edit"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:visibility="gone" />
+
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_weight="2"
-            android:textAlignment="center" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/mypage_second_hobby2"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="3"
+                android:text="미입력"
+                android:textAlignment="center"
+                android:visibility="visible"
+                />
+
+            <Spinner
+                android:id="@+id/hobby_second_sub_edit"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:visibility="gone" />
+
+        </FrameLayout>
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/hobby3_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/hobby2_layout"
@@ -198,23 +296,61 @@
             android:layout_margin="10dp"
             android:text="3 순위" />
 
-        <Spinner
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <TextView
             android:id="@+id/mypage_thirdhobby1"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_weight="2"
-            android:textAlignment="center" />
-
-        <Spinner
+            android:layout_weight="3"
+            android:text="미입력"
+            android:textAlignment="center"
+            android:visibility="visible"
+            />
+            <Spinner
+                android:id="@+id/hobby_third_edit"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:visibility="gone" />
+        </FrameLayout>
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <TextView
             android:id="@+id/mypage_thirdhobby2"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:layout_weight="2"
-            android:textAlignment="center" />
+            android:layout_weight="3"
+            android:text="미입력"
+            android:textAlignment="center"
+            android:visibility="visible"
+            />
 
+            <Spinner
+                android:id="@+id/hobby_third_sub_edit"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:textAlignment="center"
+                android:visibility="gone" />
+
+        </FrameLayout>
     </LinearLayout>
+
+    <Button
+        android:id="@+id/edit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/hobby3_layout"
+        android:layout_centerHorizontal="true"
+        android:text="수정" />
 
 
 </RelativeLayout>
