--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -90,43 +90,43 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="65dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginRight="10dp"
-        android:gravity="center"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true">
+    <!--<LinearLayout-->
+        <!--android:layout_width="65dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="vertical"-->
+        <!--android:layout_marginRight="10dp"-->
+        <!--android:gravity="center"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_alignParentBottom="true">-->
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:visibility="invisible"
-            android:elevation="6dp"
-            android:src="@drawable/signalarm" />
+        <!--<android.support.design.widget.FloatingActionButton-->
+            <!--android:id="@+id/fab3"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="20dp"-->
+            <!--android:visibility="invisible"-->
+            <!--android:elevation="6dp"-->
+            <!--android:src="@drawable/signalarm" />-->
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:elevation="6dp"
-            android:src="@drawable/floatingmessage"
-            android:visibility="invisible"/>
+        <!--<android.support.design.widget.FloatingActionButton-->
+            <!--android:id="@+id/fab2"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="20dp"-->
+            <!--android:elevation="6dp"-->
+            <!--android:src="@drawable/floatingmessage"-->
+            <!--android:visibility="invisible"/>-->
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            android:layout_marginBottom="30dp"
-            android:src="@drawable/logo"
-            android:backgroundTint="#0000"
-            />
+        <!--<android.support.design.widget.FloatingActionButton-->
+            <!--android:id="@+id/fab"-->
+            <!--android:layout_width="55dp"-->
+            <!--android:layout_height="55dp"-->
+            <!--android:layout_marginBottom="30dp"-->
+            <!--android:src="@drawable/logo"-->
+            <!--android:backgroundTint="#0000"-->
+            <!--/>-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
 
 
