--- a/app/src/main/res/layout/network_progress_dialog.xml
+++ b/app/src/main/res/layout/network_progress_dialog.xml
@@ -3,26 +3,19 @@
               android:orientation="vertical"
               android:gravity="center"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-    android:background="@drawable/background">
+              android:layout_height="match_parent">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#44000000"
         android:gravity="center">
 
-        <ImageView
-            android:src="@drawable/logo"
-            android:layout_width="200dp"
-            android:layout_height="200dp" />
-
-    <ImageView
-        android:src="@drawable/loading"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="50dp"/>
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:progressTint="#ffffff"
+            android:progressBackgroundTint="#ffffff"/>
 
     </LinearLayout>
 
