--- a/app/src/main/res/layout/chat.xml
+++ b/app/src/main/res/layout/chat.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@drawable/background"
-              android:focusable="true"
-              android:focusableInTouchMode="true"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background2"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:orientation="vertical"
+
+    >
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/chattinglisttop" />
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/chatListView"
@@ -13,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"/>
+        android:dividerHeight="0dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,16 +34,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:backgroundTint="?android:attr/panelBackground"
+            android:gravity="center"
             android:hint="채팅을 입력하세요"
-            android:privateImeOptions="defaultInputmode=korean"/>
+            android:privateImeOptions="defaultInputmode=korean" />
 
         <Button
             android:id="@+id/sendBtn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:background="@drawable/sendbtn"
+            android:layout_width="260dp"
+            android:layout_height="35dp"
             android:layout_weight="2"
             android:enabled="false"
             android:onClick="onClick"
-            android:text="전송"/>
+            />
     </LinearLayout>
 </LinearLayout>
