--- a/app/src/main/res/layout/view_match_chat.xml
+++ b/app/src/main/res/layout/view_match_chat.xml
@@ -8,13 +8,13 @@
         android:id="@+id/tv_matchchat"
         android:layout_alignParentLeft="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:gravity="center"
         android:textColor="#000000"
         android:textSize="14sp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
         android:layout_marginLeft="10dp"
-        android:background="@drawable/talk_balloon_fr"/>
+        android:background="@drawable/youchatting"/>
 
 </RelativeLayout>
