채팅방 말풍선 나인패치 이미지 적용

--- a/app/src/main/res/layout/view_my_chat.xml
+++ b/app/src/main/res/layout/view_my_chat.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tv_mychat"
         android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:textColor="@color/Color_white"
         android:textSize="14sp"
