--- a/app/src/main/res/layout/view_match_chat.xml
+++ b/app/src/main/res/layout/view_match_chat.xml
@@ -8,7 +8,7 @@
         android:id="@+id/tv_matchchat"
         android:layout_alignParentLeft="true"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:textColor="#000000"
         android:textSize="14sp"
