--- a/app/src/main/res/layout/recyclerviewholder_chat.xml
+++ b/app/src/main/res/layout/recyclerviewholder_chat.xml
@@ -3,11 +3,6 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/chattingmainlogo" />
-
     <LinearLayout
         android:id="@+id/viewholder_parent"
         android:layout_width="match_parent"
@@ -15,10 +10,10 @@
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:padding="5dp"
             android:id="@+id/photo"
             android:layout_width="65dp"
-            android:layout_height="65dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
             android:adjustViewBounds="false"
             android:cropToPadding="false"
             android:src="@drawable/sub_img_picture" />
@@ -36,15 +31,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="이름"
+                android:textColor="@color/Color_black"
                 android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/chat"
                 android:layout_width="match_parent"
-                android:layout_height="55dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="2dp"
                 android:layout_marginTop="10dp"
                 android:text="대화내용"
+                android:textColor="@color/Color_black"
                 android:textSize="15sp"
                 />
 
@@ -56,8 +53,8 @@
     <View
         android:layout_below="@+id/viewholder_parent"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#000000"/>
+        android:layout_height="1dp"
+        android:background="@color/Color_black"/>
 
 
 </LinearLayout>
