--- a/app/src/main/res/layout/view_match_chat.xml
+++ b/app/src/main/res/layout/view_match_chat.xml
@@ -4,9 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/match_img"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:src="@drawable/sub_img_picture"/>
+
     <TextView
         android:id="@+id/tv_matchchat"
-        android:layout_alignParentLeft="true"
+        android:layout_toRightOf="@+id/match_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
