--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#7e57c2</color>
-    <color name="colorPrimaryDark">#7e57c2</color>
-    <color name="colorAccent">#7e57c2</color>
+    <color name="colorPrimary">#4C3667</color>
+    <color name="colorPrimaryDark">#4C3667</color>
+    <color name="colorAccent">#4C3667</color>
 
 
     <color name="Color_white">#ffffff</color>
