--- a/app/src/main/res/layout/fragment_match.xml
+++ b/app/src/main/res/layout/fragment_match.xml
@@ -3,48 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/background">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imgbtn_user"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:src="@drawable/user" />
-
-            <ImageView
-                android:id="@+id/image_logo"
-                android:layout_width="269dp"
-                android:layout_height="30dp"
-                android:src="@drawable/title" />
-
-            <ImageView
-                android:id="@+id/imgbtn_settings"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_weight="1"
-                android:layout_marginRight="8dp"
-                android:onClick="onClick"
-                android:padding="0dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/settings" />
-
-        </LinearLayout>
 
 
         <com.prograpy.app2.appdev2.main.MatchCustomViewPager
