--- a/app/src/main/res/layout/fragment_end.xml
+++ b/app/src/main/res/layout/fragment_end.xml
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/fragment_back"
-    android:layout_gravity="center">
+    android:background="@android:color/transparent">
 
-<LinearLayout
-    android:layout_marginTop="100dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:layout_gravity="center">
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/iconbox"
-        android:layout_gravity="center"/>
+    <LinearLayout
+        android:layout_marginTop="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/iconbox"
+            android:layout_gravity="center"/>
 
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/num"
-        android:layout_gravity="bottom"
-        android:layout_marginBottom="15dp"/>
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/num"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="15dp"/>
 
-</LinearLayout>
+    </LinearLayout>
 
     <ImageView
         android:layout_marginTop="20dp"
@@ -36,5 +34,4 @@
         android:layout_gravity="center"/>
 
 
-
-</>
+</LinearLayout>
