--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -3,110 +3,121 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_gravity="center"
-    android:background="@android:color/transparent">
+    android:layout_height="wrap_content"
+    android:background="@android:color/transparent"
+    android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/infoPic"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="10dp" />
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:src="@drawable/sub_img_picture"/>
 
     <TextView
         android:id="@+id/infoName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="강호동"
-        android:textSize="20dp"
         android:layout_gravity="center"
-        android:textColor="@android:color/black"/>
+        android:layout_marginTop="20dp"
+        android:text="강호동"
+        android:textColor="@android:color/black"
+        android:textSize="20dp"/>
 
     <View
-        android:layout_width="280dp"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/black"
-        android:layout_marginTop="20dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="15dp"
+        android:background="@color/Color_grey04"/>
 
-
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_gravity="center">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginLeft="25dp"
+        android:layout_marginRight="25dp"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="나이 : "
-            android:textSize="20sp" />
+            android:layout_marginTop="10dp">
 
-        <TextView
-            android:id="@+id/infoAge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="22"
-            android:layout_gravity="right"
-            android:textSize="20sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:textColor="@color/Color_black"
+                android:text="나이"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:id="@+id/infoAge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/Color_black"
+                android:layout_alignParentRight="true"
+                android:text="22"
+                android:textSize="18sp"/>
+
+        </RelativeLayout>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:textColor="@color/Color_black"
+                    android:text="성별"
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/infoGender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/Color_black"
+                    android:layout_alignParentRight="true"
+                    android:text="여자"
+                    android:textSize="18sp"/>
+
+            </RelativeLayout>
+
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:textColor="@color/Color_black"
+                    android:text="지역"
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/infoArea"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/Color_black"
+                    android:layout_alignParentRight="true"
+                    android:text="경기도 과천시"
+                    android:textSize="18sp"/>
+
+            </RelativeLayout>
+
 
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="성별 : "
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"/>
-        <TextView
-            android:id="@+id/infoGender"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="여자"
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="지역 : "
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"/>
-        <TextView
-            android:id="@+id/infoArea"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="경기도 과천시"
-            android:textSize="20sp"
-            android:layout_marginTop="10dp"/>
-
-    </LinearLayout>
-
-
-</LinearLayout>
-
-
 
 
 </LinearLayout>
